PIC-2733
. Moved case markers from hearing to court case entity.
. Updated tests.